--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:design:23.3.0'
     compile 'com.android.support:support-v4:23.3.0'
     compile 'com.github.devlight.navigationtabbar:library:1.1.5'
+    compile 'com.google.code.gson:gson:1.7.2'
 }
