--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.github.devlight.navigationtabbar:library:1.1.5'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.volley:volley:1.0.0'
 }
