--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
+    compile 'com.havenondemand:hodclient:2.0'
+    compile 'com.havenondemand:hodresponseparser:2.0'
 }
