--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,11 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
-    compile 'com.havenondemand:hodclient:2.0'
     compile 'com.havenondemand:hodresponseparser:2.0'
+    compile 'com.github.ivbaranov:materialfavoritebutton:0.1.2'
+    compile 'com.seatgeek:placesautocomplete:0.2-SNAPSHOT'
+}
+
+repositories {
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
